fix option-list z-index

--- a/src/notebook/style/option-list.css
+++ b/src/notebook/style/option-list.css
@@ -9,6 +9,8 @@
 
     box-shadow: var(--top-box-shadow);
     border-radius: 4px;
+
+    z-index: 10000;
 }
 
 /* ------------------------------------- */
